fix: gsap choppiness on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -127,7 +127,6 @@ svg {
 
 .gradient-bg-3 {
   height: 100%;
-  min-height: 100vh;
   position: relative;
   background: linear-gradient(135deg, #775253 0%, #312623 70%);
   left: 0;
